force-app/main/default/objects/hed__Affiliation__c/fields/hed__Account__c.field-meta.xml
<CustomField>
    <fullName>hed__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization this person is affiliated with.</description>
    <inlineHelpText>L&apos;organisation à laquelle cette personne est affiliée.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Contacts</relationshipLabel>
    <relationshipName>Affl_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>