force-app/main/default/objects/hed__Affiliation__c/fields/hed__Primary__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the main Affiliation for this person. If selected, the organization name is stored in the relevant Primary Affiliation field on the Contact record.</description>
    <inlineHelpText>Indique s&apos;il s&apos;agit de l&apos;affiliation principale pour cette personne. Si cette option est sélectionnée, le nom de l&apos;organisation est stocké dans le champ Affiliation principale dans l&apos;enregistrement Contact.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>