force-app/main/default/objects/hed__Affiliation__c/fields/hed__Role__c.field-meta.xml
<CustomField>
    <fullName>hed__Role__c</fullName>
    <description>The role this person has with the organization.</description>
    <inlineHelpText>Le rôle que cette personne dans l’organisation.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>