force-app/main/default/objects/hed__Affiliation__c/fields/hed__StartDate__c.field-meta.xml
<CustomField>
    <fullName>hed__StartDate__c</fullName>
    <description>The date this person became affiliated with this organization.</description>
    <inlineHelpText>La date à laquelle cette personne a été affiliée à cette organisation.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>